--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <title>My Personal Website</title>
   </head>
   <body>
-    <h1>Welcome to my Personal Website</h1>
-    <p>It's very nice to have a personal website.</p>
+    <p>I'm JD and I rocks. I say things online at <a href="https://twitter.com/justindross">twitter.com/justindross</a>.</p>
   </body>
 </html>
